Added style for form

--- a/index.html
+++ b/index.html
@@ -187,17 +187,23 @@
         <div class="contact__content">
           <form class="contact__form">
             <input type="text" class="contact__input contact__name" placeholder="Full name" />
+            <label class="contact__name-icon"><img src="images/fullname.png" width="20px" height="20px"
+                alt="name icon"></label>
             <input type="text" class="contact__input contact__email" placeholder="Email address" />
+            <label class="contact__email-icon"><img src="images/email.png" width="20px" height="20px"
+                alt="email icon"></label>
             <select class="contact__budget">
               <option>100$</option>
               <option>200$</option>
               <option>300$</option>
             </select>
+            <label class="contact__budget-arrow"></label>
             <select class="contact__timeline">
               <option>1 month</option>
               <option>2 month</option>
               <option>3 month</option>
             </select>
+            <label class="contact__timeline-arrow"></label>
             <textarea class="contact__about" placeholder="Tell me about project briefly" rows="8"></textarea>
             <button class="contact__send" type="button">SEND</button>
           </form>
