Added footer and basement for map

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
       <div class="wrapper">
         <div class="map__point"></div>
         <div class="map__badge">
-          <span class="map__based">I'm based in</span>
+          <span class="map__based">I'm based in</span><br>
           <span class="map__location">Milan, Italy</span>
         </div>
       </div>
@@ -269,7 +269,7 @@
   <footer class="footer">
     <div class="wrapper">
       <div class="footer__menu">
-        <h2>Menu</h2>
+        <h2 class="footer__item-title">Menu</h2>
         <nav class="footer-nav">
           <ul class="footer-nav__items">
             <li><a href="#" class="footer-nav__item">Home</a></li>
@@ -281,17 +281,17 @@
         </nav>
       </div>
       <div class="footer-contact">
-        <h2>Contact</h2>
+        <h2 class="footer__item-title">Contact</h2>
         <span>Flat 3D Mockup Kit</span>
       </div>
       <div class="footer-newsletter">
-        <h2>Newsletter</h2>
+        <h2 class="footer__item-title">Newsletter</h2>
 
       </div>
       <div class="footer-follow">
-        <h2>Follow Us</h2>
-        <a href="#"><img src="#" alt="Twitter"></a>
-        <a href="#"><img src="#" alt="Facebook"></a>
+        <h2 class="footer__item-title">Follow Us</h2>
+        <a href="#" class="footer__twitter">Twitter</a>
+        <a href="#" class="footer__facebook">Facebook</a>
       </div>
     </div>
   </footer>
