--- a/index.html
+++ b/index.html
@@ -20,28 +20,31 @@
 
   <header class="header">
     <div class="wrapper">
-      <div class="header__title">Beetle</div>
+
       <nav class="nav">
+        <div class="header__title">Beetle</div>
         <ul class="nav__items">
-          <li><a href="#" class="nav__item">Home</a></li>
-          <li><a href="#" class="nav__item">Portfolio</a></li>
-          <li><a href="#" class="nav__item">Blog</a></li>
-          <li><a href="#" class="nav__item">Resume</a></li>
-          <li><a href="#" class="nav__item">Contact</a></li>
+          <li><a href="#" class="nav__item nav__item-arrowed"><span>Home</span></a></li>
+          <li><a href="#" class="nav__item"><span>Portfolio</span></a></li>
+          <li><a href="#" class="nav__item"><span>Blog</span></a></li>
+          <li><a href="#" class="nav__item nav__item-underlined"><span>Resume</span></a></li>
+          <li><a href="#" class="nav__item"><span>Contact</span></a></li>
         </ul>
       </nav>
+
+      <div class="title">
+        <h1 class="title__title">DESIGNER & MAKER</h1>
+        <span class="title__description">BUILDING NEW PRODUCTS AT SPOTIFY NYC .MAIL APP</span>
+        <a class="title__arrow" href="#">
+          <div>
+          </div>
+        </a>
+      </div>
+
     </div>
   </header>
 
   <main class="main">
-    <div class="title">
-      <div class="wrapper">
-        <h1 class="title__title">Designer and maker</h1>
-        <span class="title__description">Building new products at spotify nyc .mail app</span>
-        <a class="title__arrow" href="#">&darr;</a>
-      </div>
-    </div>
-
     <div class="slider slider-responsibilities">
       <div class="wrapper">
         <div class="slide slide1">
@@ -67,15 +70,15 @@
       <div class="wrapper">
         <h2 class="portfolio__title">PORTFOLIO</h2>
         <div class="portfolio-grid-container">
-          <div class="portfolio__item-1"></div>
-          <div class="portfolio__item-big"></div>
-          <div class="portfolio__item-2"></div>
-          <div class="portfolio__item-3"></div>
-          <div class="portfolio__item-4"></div>
-          <div class="portfolio__item-5"></div>
-          <div class="portfolio__item-6"></div>
-          <div class="portfolio__item-7"></div>
-          <div class="portfolio__item-8"></div>
+          <div class="portfolio__item portfolio__item-1"></div>
+          <div class="portfolio__item portfolio__item-big"></div>
+          <div class="portfolio__item portfolio__item-2"></div>
+          <div class="portfolio__item portfolio__item-3"></div>
+          <div class="portfolio__item portfolio__item-4"></div>
+          <div class="portfolio__item portfolio__item-5"></div>
+          <div class="portfolio__item portfolio__item-6"></div>
+          <div class="portfolio__item portfolio__item-7"></div>
+          <div class="portfolio__item portfolio__item-8"></div>
         </div>
         <a class="portfolio__browse" href="#">Browse portfolio</a>
       </div>
