--- a/index.html
+++ b/index.html
@@ -45,23 +45,39 @@
   </header>
 
   <main class="main">
-    <div class="slider slider-responsibilities">
+    <div class="slider-responsibilities">
       <div class="wrapper">
-        <div class="slide slide1">
-          <div class="slide__image">
-            <div class="slide1__rect slide1__ui">
-              <span>UI</span>
+        <input type="radio" name="point" id="slide1-resp" checked>
+        <input type="radio" name="point" id="slide2-resp">
+        <input type="radio" name="point" id="slide3-resp">
+        <div class="slider">
+          <div class="slide slide1">
+            <div class="slide__image">
+              <div class="slide1__rect slide1__ui">
+                <span>UI</span>
+              </div>
+              <div class="slide1__rect slide1__ux">
+                <span>UX</span>
+              </div>
             </div>
-            <div class="slide1__rect slide1__ux">
-              <span>UX</span>
+            <div class="slide__description">
+              <h2 class="slide__title">I create simple interfaces for humans and enjoy pixel-prefection</h2>
+              <p class="slide__text">
+                I'm an experienced and passionate user interface designer with interaction design background
+              </p>
             </div>
           </div>
-          <div class="slide__description">
-            <h2 class="slide__title">I create simple interfaces for humans and enjoy pixel-prefection</h2>
-            <p class="slide__text">
-              I'm an experienced and passionate user interface designer with interaction design background
-            </p>
+          <div class="slide slide2">
+
           </div>
+          <div class="slide slide3">
+
+          </div>
+        </div>
+        <div class="slider__controls">
+          <label for="slide1-resp"></label>
+          <label for="slide2-resp"></label>
+          <label for="slide3-resp"></label>
         </div>
       </div>
     </div>
@@ -70,15 +86,89 @@
       <div class="wrapper">
         <h2 class="portfolio__title">PORTFOLIO</h2>
         <div class="portfolio-grid-container">
-          <div class="portfolio__item portfolio__item-1"></div>
-          <div class="portfolio__item portfolio__item-big"></div>
-          <div class="portfolio__item portfolio__item-2"></div>
-          <div class="portfolio__item portfolio__item-3"></div>
-          <div class="portfolio__item portfolio__item-4"></div>
-          <div class="portfolio__item portfolio__item-5"></div>
-          <div class="portfolio__item portfolio__item-6"></div>
-          <div class="portfolio__item portfolio__item-7"></div>
-          <div class="portfolio__item portfolio__item-8"></div>
+          <div class="portfolio__item portfolio__item-1">
+            <div class="portfolio__item-content">
+              <div class="portfolio__item-logo"></div>
+              <h2 class="portfolio__item-name">Site name</h2>
+              <p class="portfolio__item-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+            </div>
+          </div>
+          <div class="portfolio__item portfolio__item-big">
+            <div class="portfolio__item-content">
+              <div class="portfolio__item-logo"></div>
+              <h2 class="portfolio__item-name">Site name</h2>
+              <p class="portfolio__item-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, sed quibusdam assumenda cumque saepe qui
+                culpa ullam mollitia velit, esse iusto voluptates delectus eum exercitationem amet libero optio corrupti
+                eveniet!
+              </p>
+            </div>
+          </div>
+          <div class="portfolio__item portfolio__item-2">
+            <div class="portfolio__item-content">
+              <div class="portfolio__item-logo"></div>
+              <h2 class="portfolio__item-name">Site name</h2>
+              <p class="portfolio__item-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+            </div>
+          </div>
+          <div class="portfolio__item portfolio__item-3">
+            <div class="portfolio__item-content">
+              <div class="portfolio__item-logo"></div>
+              <h2 class="portfolio__item-name">Site name</h2>
+              <p class="portfolio__item-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+            </div>
+          </div>
+          <div class="portfolio__item portfolio__item-4">
+            <div class="portfolio__item-content">
+              <div class="portfolio__item-logo"></div>
+              <h2 class="portfolio__item-name">Site name</h2>
+              <p class="portfolio__item-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+            </div>
+          </div>
+          <div class="portfolio__item portfolio__item-5">
+            <div class="portfolio__item-content">
+              <div class="portfolio__item-logo"></div>
+              <h2 class="portfolio__item-name">Site name</h2>
+              <p class="portfolio__item-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+            </div>
+          </div>
+          <div class="portfolio__item portfolio__item-6">
+            <div class="portfolio__item-content">
+              <div class="portfolio__item-logo"></div>
+              <h2 class="portfolio__item-name">Site name</h2>
+              <p class="portfolio__item-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+            </div>
+          </div>
+          <div class="portfolio__item portfolio__item-7">
+            <div class="portfolio__item-content">
+              <div class="portfolio__item-logo"></div>
+              <h2 class="portfolio__item-name">Site name</h2>
+              <p class="portfolio__item-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+            </div>
+          </div>
+          <div class="portfolio__item portfolio__item-8">
+            <div class="portfolio__item-content">
+              <div class="portfolio__item-logo"></div>
+              <h2 class="portfolio__item-name">Site name</h2>
+              <p class="portfolio__item-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+            </div>
+          </div>
         </div>
         <a class="portfolio__browse" href="#">Browse portfolio</a>
       </div>
