Added working slider on top of page

--- a/index.html
+++ b/index.html
@@ -68,10 +68,36 @@
             </div>
           </div>
           <div class="slide slide2">
-
+            <div class="slide__image">
+              <div class="slide1__rect slide1__ui">
+                <span>UI</span>
+              </div>
+              <div class="slide1__rect slide1__ux">
+                <span>UX</span>
+              </div>
+            </div>
+            <div class="slide__description">
+              <h2 class="slide__title">I create simple interfaces for humans and enjoy pixel-prefection</h2>
+              <p class="slide__text">
+                This is second slide
+              </p>
+            </div>
           </div>
           <div class="slide slide3">
-
+            <div class="slide__image">
+              <div class="slide1__rect slide1__ui">
+                <span>UI</span>
+              </div>
+              <div class="slide1__rect slide1__ux">
+                <span>UX</span>
+              </div>
+            </div>
+            <div class="slide__description">
+              <h2 class="slide__title">I create simple interfaces for humans and enjoy pixel-prefection</h2>
+              <p class="slide__text">
+                And this is third slide
+              </p>
+            </div>
           </div>
         </div>
         <div class="slider__controls">
